--- a/scss/blocks/_content-container.scss
+++ b/scss/blocks/_content-container.scss
@@ -191,8 +191,8 @@
 
         &__item {
             position: relative;
-            margin-top: 15px;
-            margin-bottom: 15px;
+            margin-top: 20px;
+            // margin-bottom: 15px;
             font-size: 20px;
 
             &::before {
