--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -49,7 +49,6 @@
         &__icon,
         &__title {
             display: inline-block;
-            // margin-top: 32px;
         }
 
         &__title {
@@ -118,7 +117,7 @@
 
         &__title {
             max-width: 210px;
-            margin-top: 50px;
+            margin-top: 0;
             margin-left: 15px;
             font-size: 25px;
         }
