--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 
 @import './blocks/contacts';
 @import './blocks/footer';
+@import './blocks/popup';
 
 @import './blocks/title-container';
 @import './blocks/content-container';
