--- a/scss/style.css
+++ b/scss/style.css
@@ -78,9 +78,6 @@ body {
   padding: 0 15px;
 }
 
-.banner * {
-  outline: 1px solid palevioletred;
-}
 .banner__container {
   max-width: 1920px;
   font-family: "Rubik", sans-serif;
@@ -92,8 +89,7 @@ body {
 .banner__slide {
   display: flex;
   align-items: center;
-  min-height: 700px;
-  padding-bottom: 20%;
+  min-height: 36vw;
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -116,8 +112,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  min-width: 38%;
-  max-width: 717px;
+  width: 38%;
   min-height: 260px;
   margin-left: 47%;
   padding: 45px;
