fix bug with contacts and footer in html file

--- a/scss/style.css
+++ b/scss/style.css
@@ -2468,4 +2468,4 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     top: 17px;
     right: 20px;
   }
-}
+}/*# sourceMappingURL=style.css.map */
