popup media 320px done

--- a/scss/blocks/_popup.scss
+++ b/scss/blocks/_popup.scss
@@ -330,6 +330,9 @@
     }
 }
 
+
+
+
 @media screen and (max-width: 320px) {
     .popup {
         position: fixed;
@@ -353,25 +356,30 @@
         &-form {
             position: relative;
             max-width: 290px;
-            padding: 20px 17px 18px;
+            min-width: 290px;
+            padding: 30px 17px 18px;
             margin-top: 50px;
         }
 
         &__close {
             position: absolute;
-            top: 30px;
+            top: 15px;
             right: 10px;
+            max-width: 14px;
             text-decoration: none;
             cursor: pointer;
         }
+    }
+
+    .close__tnks {
+        max-width: 14px;
     }
 
     .popup-content {
         max-width: 290px;
     }
 
-    .content-container {
-        max-width: 290px;
+    .content-wrapper {
 
         &_lg {
             min-width: 250px;
@@ -379,14 +387,15 @@
     }
 
     .textarea {
-        max-width: 240px;
-        min-width: 240px;
+        max-width: 250px;
+        min-width: 250px;
     }
 
     .popup-button {
-        max-width: 250px;
-        min-width: 250px;
-        font-size: 20px;
+        max-width: 100%;
+        min-width: 254px;
+        font-size: 18px;
+        padding-left: 15px;
 
         &::after {
             position: absolute;
@@ -394,8 +403,12 @@
             background-image: url('../../images/arrows/white_arrow.svg');
             width: 32px;
             height: 10px;
-            top: 18px;
-            right: 49.5px;
+            top: 19.5px;
+            right: 15px;
         }
+    }
+
+    .input-field_modal {
+        width: 100%;
     }
 }
