add links to href attribute in header & footer; add popup open script

--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -58,6 +58,7 @@
 .contacts-inner_right {
     & .content-container__item_bold {
         font-size: 20px;
+        color: $text-color-main;
     }
 
     & .content-container__item {
