--- a/scss/style.css
+++ b/scss/style.css
@@ -1258,6 +1258,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 
 .contacts-inner_right .content-container__item_bold {
   font-size: 20px;
+  color: #000000;
 }
 .contacts-inner_right .content-container__item {
   margin-top: 10px;
