--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -11,7 +11,7 @@
         flex-direction: column;
     }
 
-    &_right {
+    &_right__map {
         max-width: 898px;
         max-height: 387px;
     }
