--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -13,7 +13,7 @@
         justify-content: space-between;
         background-color: white;
         border-radius: 0px 0px 4px 4px;
-        width: 706px;
+        width: 665px;
         height: 592px;
         padding: 70px 45px 55px 45px;
         margin-bottom: -65px;
@@ -26,7 +26,7 @@
         font-size: 40px;
         line-height: 39px;
         color: #D71635;
-        padding-left: 135px;
+        padding-left: 100px;
         padding-bottom: 0;
         margin-bottom: 45px;
         position: relative;
@@ -37,8 +37,8 @@
             background-image: url(../images/vector.png);
             width: 110px;
             height: 26px;
-            left: 0;
-            bottom: 0;
+            left: -30px;
+            bottom: 5px;
         }
     }
 
@@ -94,12 +94,17 @@
     }
 
     &__desc-inner {
-        gap: 80px;
+        gap: 100px;
+        justify-content: space-between;
+
+        @media screen and (max-width: 1460px) {
+            gap: 60px;
+        }
     }
 
     &__desc-row {
         gap: 40px;
-        width: 550px;
+        width: 560px;
     }
 
     &__desc-col {
@@ -108,16 +113,15 @@
         &:nth-child(2) {
             gap: 45px;
         }
-    }
 
-    &__desc-text {
-        width: 540px;
+        &:nth-child(1) {
+            width: 500px;
+        }
     }
 
     &__desc {
-        font-weight: 500;
         font-size: 18px;
-        width: 265px;
+        font-weight: 500;
     }
 
     &__desc-title {
@@ -127,12 +131,20 @@
         color: #D71635;
     }
 
+    &__desc-text {
+        width: 500px;
+    }
+
     &__block {
-        padding: 10px 75px;
+        padding: 10px 50px 10px 75px;
         height: 70px;
         justify-content: center;
         background-color: white;
         border-radius: 4px;
+
+        @media screen and (max-width: 1460px) {
+            padding: 10px 25px 10px 75px;
+        }
 
         & p {
             display: block;
@@ -144,21 +156,65 @@
         gap: 15px;
     }
 
+    &__block-inner {
+        font-size: 18px;
+
+        @media screen and (max-width: 1460px) {
+            font-size: 16px;
+        }
+    }
+
     &__btn {
         height: 70px;
+        line-height: 42px;
         color: white;
         background-color: #D71635;
         border-radius: 4px;
         border: transparent;
+        font-weight: 400;
         text-transform: uppercase;
     }
 }
 
-.title span {
-    color: #D71635;
+.title {
+    font-weight: 500;
+
+    & span {
+        color: #D71635;
+        font-weight: 600;
+    }
 }
 
 .block-first:nth-child(1),
 .block-second:nth-child(2) {
     font-weight: 500;
+}
+
+.icon__1 {
+    position: relative;
+    gap: 5px;
+
+    &::before {
+        position: absolute;
+        content: '';
+        background-image: url(../images/about-icon1.svg);
+        width: 55px;
+        height: 48px;
+        left: 10px;
+        bottom: 10px;
+    }
+}
+
+.icon__2 {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: '';
+        background-image: url(../images/about-icon2.svg);
+        width: 45px;
+        height: 45px;
+        left: 10px;
+        bottom: 10px;
+    }
 }
