--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -1,6 +1,7 @@
 .products {
-    margin-top: 80px;
-    margin-bottom: 100px;
+    width: 78%;
+    max-width: 1700px;
+    margin: 80px auto 100px;
     font-family: $main-font;
 
     // * {
@@ -9,8 +10,6 @@
 
     &__title-group {
         display: flex;
-        width: 85%;
-        margin: 0 auto;
 
         img {
             width: 10%;
@@ -26,24 +25,23 @@
     &__shampoo {}
 
     &__subtitle {
-        width: 85%;
-        margin: 25px auto;
+        margin: 50px auto 30px;
         @include font-style (500, $subtitle-font-size, 39px);
     }
 
     &__visible-wrapper {
-        width: 85%;
-        margin: 20px auto;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
+
+        &_wax {
+            justify-content: flex-start;
+        }
     }
 
     &__collapsible-wrapper {
-        width: 85%;
-        margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-between;
 
         max-height: 0;
         overflow: hidden;
@@ -56,6 +54,7 @@
 
     &__product-card {
         width: 24%;
+        padding-bottom: 20px;
         margin-right: 10px;
         outline: 1.3px solid $bg-color-light;
     }
@@ -74,7 +73,7 @@
         flex-direction: column;
         justify-content: space-around;
         padding: 20px;
-        min-height: 700px;
+        min-height: 600px;
     }
 
     &__card-title {
@@ -114,10 +113,8 @@
     }
 
     &__size-option {
-        // width: 52px;
         width: 19%;
-        // max-width: 52px;
-        padding: 6px;
+        padding: 6px 4px;
         margin-right: 6px;
         @include font-style (300, $small-text-font-size, 24px);
         text-align: center;
@@ -128,7 +125,6 @@
         width: 35%;
         @include button-main (118px, 15px, $button-font-size);
         text-transform: uppercase;
-        // @include font-style (400, $button-font-size, 24px);
     }
 
     &__button-more {
