--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -129,6 +129,10 @@
         font-size: 25px;
         text-transform: uppercase;
         color: #D71635;
+
+        @media screen and (max-width: 1460px) {
+            text-align: center;
+        }
     }
 
     &__desc-text {
@@ -173,6 +177,18 @@
         border: transparent;
         font-weight: 400;
         text-transform: uppercase;
+        padding-right: 40px;
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: '';
+            background-image: url(../images/arrows/white_arrow.svg);
+            width: 32px;
+            height: 10px;
+            bottom: 32px;
+            left: 190px;
+        }
     }
 }
 
@@ -201,7 +217,7 @@
         width: 55px;
         height: 48px;
         left: 10px;
-        bottom: 10px;
+        bottom: 13px;
     }
 }
 
@@ -215,6 +231,20 @@
         width: 45px;
         height: 45px;
         left: 10px;
-        bottom: 10px;
+        bottom: 15px;
+    }
+}
+
+.icon__3 {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: '';
+        background-image: url(../images/about-icon3.svg);
+        width: 36px;
+        height: 45px;
+        left: 10px;
+        bottom: 13px;
     }
 }
