--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -30,7 +30,15 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 
-    @media screen and (max-width: 1460px) {
-        max-width: 1300px;
+    @media screen and (max-width: 1360px) {
+        max-width: 1200px;
+    }
+
+    @media screen and (max-width: 1300px) {
+        max-width: 1150px;
+    }
+
+    @media screen and (max-width: 1200px) {
+        max-width: 1050px;
     }
 }
