--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -1,10 +1,9 @@
 .banner {
-    // * {
-    //     outline: 1px solid palevioletred;
-    // }
+    * {
+        outline: 1px solid palevioletred;
+    }
 
     &__container {
-        max-width: 1920px;
         font-family: $main-font;
 
         // * {
@@ -13,7 +12,6 @@
     }
 
     &__slider {
-        max-height: 700px;
         position: relative;
     }
 
@@ -48,16 +46,16 @@
     }
 
     &__info {
-        // width: fit-content;
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
         width: 38%;
-        // min-width: 38%;
-        // max-width: 717px;
+        max-width: 730px;
         min-height: 260px;
         margin-left: 47%;
         padding: 45px;
+
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+
         border-radius: 4px 0 4px 4px;
         background-color: #FFFFFF58;
     }
@@ -92,8 +90,8 @@
         align-items: center;
         justify-content: space-between;
 
-        max-width: 717px;
-        min-width: 42.5%;
+        width: 43%;
+        max-width: 820px;
     }
 
     &__pagination {}
@@ -103,7 +101,6 @@
         min-height: 50px;
         border: none;
         border-radius: 25px;
-        // box-sizing: border-box;
 
         img {
             margin: 0 auto;
@@ -126,7 +123,6 @@
     background: none;
 }
 
-/* target all bullets */
 .swiper-pagination-bullet {
     width: 50px;
     height: 4px;
@@ -135,8 +131,106 @@
     opacity: 1;
 }
 
-/* target the active bullet */
 span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     background-color: $bg-color-main;
     opacity: 1;
+}
+
+
+@media screen and (min-width: 1644px) and (max-width: 1844px) {
+    .banner {
+        &__info {
+            min-height: 200px;
+        }
+
+        &__navigation {
+            top: 80%;
+        }
+
+        &__text {
+            // font-size: 22px;
+            line-height: 32px;
+        }
+    }
+}
+
+@media screen and (min-width: 1469px) and (max-width: 1643px) {
+    .banner {
+        &__info {
+            min-height: 150px;
+            padding: 35px;
+        }
+
+        &__navigation {
+            width: 43%;
+            top: 82%;
+        }
+
+        &__title {
+            font-size: 36px;
+        }
+
+        &__text {
+            margin: 15px auto;
+            font-size: 22px;
+            line-height: 32px;
+        }
+    }
+}
+
+@media screen and (min-width: 1285px) and (max-width: 1468px) {
+    .banner {
+        &__info {
+            min-height: 100px;
+            padding: 30px;
+        }
+
+        &__navigation {
+            // width: 44%;
+            top: 84%;
+        }
+
+        &__title {
+            font-size: 30px;
+        }
+
+        &__text {
+            font-size: 20px;
+            line-height: 26px;
+        }
+    }
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1284px) {
+    .banner {
+        &__info {
+            width: 43%;
+            min-height: 80px;
+            padding: 27px 27px 20px 27px;
+            margin-left: 45%;
+        }
+
+        &__navigation {
+            left: 45%;
+            top: 84%;
+            width: 48%;
+        }
+
+        &__title {
+            font-size: 25px;
+            line-height: 28px;
+        }
+
+        &__text {
+            font-size: 18px;
+            line-height: 23px;
+
+            margin: 12px auto;
+        }
+
+        &__button-more {
+            font-size: 16px;
+            padding: 10px;
+        }
+    }
 }
