--- a/scss/style.css
+++ b/scss/style.css
@@ -162,12 +162,13 @@ body {
   padding-left: 10px;
 }
 
+.banner * {
+  outline: 1px solid palevioletred;
+}
 .banner__container {
-  max-width: 1920px;
   font-family: "Rubik", sans-serif;
 }
 .banner__slider {
-  max-height: 700px;
   position: relative;
 }
 .banner__slide {
@@ -193,13 +194,14 @@ body {
   background-image: url("../images/block2_slider/banner5_girl.png");
 }
 .banner__info {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
   width: 38%;
+  max-width: 730px;
   min-height: 260px;
   margin-left: 47%;
   padding: 45px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
   border-radius: 4px 0 4px 4px;
   background-color: rgba(255, 255, 255, 0.3450980392);
 }
@@ -241,8 +243,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 717px;
-  min-width: 42.5%;
+  width: 43%;
+  max-width: 820px;
 }
 .banner__nav-button {
   width: 55px;
@@ -266,7 +268,6 @@ body {
   background: none;
 }
 
-/* target all bullets */
 .swiper-pagination-bullet {
   width: 50px;
   height: 4px;
@@ -275,12 +276,82 @@ body {
   opacity: 1;
 }
 
-/* target the active bullet */
 span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #D71635;
   opacity: 1;
 }
 
+@media screen and (min-width: 1644px) and (max-width: 1844px) {
+  .banner__info {
+    min-height: 200px;
+  }
+  .banner__navigation {
+    top: 80%;
+  }
+  .banner__text {
+    line-height: 32px;
+  }
+}
+@media screen and (min-width: 1469px) and (max-width: 1643px) {
+  .banner__info {
+    min-height: 150px;
+    padding: 35px;
+  }
+  .banner__navigation {
+    width: 43%;
+    top: 82%;
+  }
+  .banner__title {
+    font-size: 36px;
+  }
+  .banner__text {
+    margin: 15px auto;
+    font-size: 22px;
+    line-height: 32px;
+  }
+}
+@media screen and (min-width: 1285px) and (max-width: 1468px) {
+  .banner__info {
+    min-height: 100px;
+    padding: 30px;
+  }
+  .banner__navigation {
+    top: 84%;
+  }
+  .banner__title {
+    font-size: 30px;
+  }
+  .banner__text {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1284px) {
+  .banner__info {
+    width: 43%;
+    min-height: 80px;
+    padding: 27px 27px 20px 27px;
+    margin-left: 45%;
+  }
+  .banner__navigation {
+    left: 45%;
+    top: 84%;
+    width: 48%;
+  }
+  .banner__title {
+    font-size: 25px;
+    line-height: 28px;
+  }
+  .banner__text {
+    font-size: 18px;
+    line-height: 23px;
+    margin: 12px auto;
+  }
+  .banner__button-more {
+    font-size: 16px;
+    padding: 10px;
+  }
+}
 .about__info {
   background-color: #EFF0F2;
 }
